# YPractikum_Mod1

./: .gitignore  Cargo.toml  README.md
src/: error.rs  lib.rs  main.rs
